[omnibox] Return reference to ImageView instead of LocationIconView (2)

Found another place where we need to return a reference to the
ImageView, not the LocationIconView.

From the previous CL:

The latter is quite wide when we fill in the label half of it, which we
now do with site security level in some cases.  The bubble (in the bug
that is in the wrong place) anchors to the middle of whatever View you
return to it, so we really want to give it the padlock here.

BUG=650140

Review-Url: https://codereview.chromium.org/2379783003
Cr-Commit-Position: refs/heads/master@{#422094}

Former-commit-id: b34fa9422ed84323d7d20ebc9eb69bb946207e87